--- a/CSS/feminino.css
+++ b/CSS/feminino.css
@@ -4,7 +4,7 @@
     font-family: sans-serif;
 }
 .menu-bar{
-    background-color:rgb(255, 255, 210);
+    background-color:whitesmoke;
 }
 .nav-link{
     font-size: 16px;
