--- a/CSS/index.css
+++ b/CSS/index.css
@@ -45,3 +45,34 @@
     margin-top: 5px;
     margin-left: 15%;
 }
+
+/* Roda pé */
+
+*{
+    margin-top: 5px;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.footer{
+    padding: 40px 0;
+    background-color: rgb(77, 76, 76);
+}
+.footer ul{
+    margin-top: 0;
+    padding: 0;
+    list-style: none;
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 0;
+    text-align: center;
+}
+.footer ul li a{
+    color: whitesmoke;
+    text-decoration: none;
+    opacity: 0.8;
+}
+.footer ul li{
+    display: inline-block;
+    padding: 0 15px;
+}
