--- a/CSS/masculino.css
+++ b/CSS/masculino.css
@@ -34,3 +34,88 @@
     margin-top: 5px;
     margin-left: 20px;
 }
+
+/* Produtos */
+
+.section-p1{
+    padding: 40px 80px;
+}
+
+#product1{
+    text-align: center;
+}
+#product1 .pro-container{
+    display:flex;
+    display: inline-block;
+    justify-content: space-between;
+    padding-top: 20px;
+}
+#product1 .pro{
+    width: 23%;
+    min-width: 250px;
+    padding: 10px 12px;
+    border: 1px solid #cce7d0;
+    border-radius: 25px;
+    cursor: pointer;
+    box-shadow: 20px 20px 30px rgb(0, 0, 0, 0.02);
+    margin: 15px 0;
+    transition: 0.2s ease;
+    position: relative;
+}
+#product1 .pro img{
+    width: 100%;
+    border-radius: 20px;
+}
+#product1 .pro .des{
+    text-align: start;
+    padding: 10px 0;
+}
+#product1 .pro .des span{
+    color:#606063;
+    font-size: 12px;
+}
+#product1 .pro .des h5{
+    padding-top: 7px;
+    color: #1a1a1a;
+    font-size: 14px;
+}
+#product1 .pro .des h4{
+    padding-top: 7px;
+    font-size: 15px;
+    font-weight: 700;
+    color: #088178;
+}
+.img{
+    height: 237px;
+}
+
+/* Roda pé */
+
+*{
+    margin-top: 5px;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.footer{
+    padding: 40px 0;
+    background-color: rgb(77, 76, 76);
+}
+.footer ul{
+    margin-top: 0;
+    padding: 0;
+    list-style: none;
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 0;
+    text-align: center;
+}
+.footer ul li a{
+    color: whitesmoke;
+    text-decoration: none;
+    opacity: 0.8;
+}
+.footer ul li{
+    display: inline-block;
+    padding: 0 15px;
+}
