--- a/CSS/index.css
+++ b/CSS/index.css
@@ -57,6 +57,7 @@
 .footer{
     padding: 40px 0;
     background-color: rgb(77, 76, 76);
+    margin-top: 100px;
 }
 .footer ul{
     margin-top: 0;
