--- a/CSS/masculino.css
+++ b/CSS/masculino.css
@@ -100,6 +100,7 @@
 .footer{
     padding: 40px 0;
     background-color: rgb(77, 76, 76);
+    margin-top: 290px;
 }
 .footer ul{
     margin-top: 0;
